fix left alignment on some pages

--- a/css/style.css
+++ b/css/style.css
@@ -48062,4 +48062,8 @@ header nav.rd-navbar-static.rd-navbar-secondary .rd-navbar-nav > li.thin {
   padding-top: 10px;
 }
 
+.justify-center {
+  justify-content: center;
+}
+
 /*# sourceMappingURL=style.css.map */
